dataset1235/2025-2/2947369575/users/1847978808/executions/3873599344_291286518.log
== SUBMISSION (2025-08-20 23:52:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:48:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666: 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:51:39)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:47:58)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:47:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666: 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:51:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666: 256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666: 1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666: 5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666: 444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666: 11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:51:54)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:45:27)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("666: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
666:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
666:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
666:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
666:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
666:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:44:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(666: ))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(666: ))
                       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(666: ))
                       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(666: ))
                       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(666: ))
                       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(666: ))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
